# AdventOfCode

./: .gitignore  Cargo.toml  README.md  advent-of-code.cabal  package.yaml  stack.yaml
src/com/caelwarner/twentytwenty/four/: PassportProcessing.java
src/com/caelwarner/twentytwenty/one/: ReportRepair.java
src/com/caelwarner/twentytwenty/three/: TobogganTrajectory.java
src/com/caelwarner/util/: Convert.java  Iterate.java  Read.java  TriConsumer.java  TriFunction.java
src/twentytwenty/eight/: HandheldHalting.java
src/twentytwenty/eighteen/: OperationOrder.java
src/twentytwenty/eleven/: SeatingSystem.java
src/twentytwenty/fifteen/: RambunctiousRecitation.java
src/twentytwenty/five/: BinaryBoarding.java
src/twentytwenty/four/: PassportProcessing.java
src/twentytwenty/fourteen/: DockingData.java
src/twentytwenty/nine/: EncodingError.java
src/twentytwenty/nineteen/: MonsterMessages.java
src/twentytwenty/one/: ReportRepair.java
src/twentytwenty/seven/: HandyHaversacks.java
src/twentytwenty/seventeen/: ConwayCubes.java
src/twentytwenty/six/: CustomCustoms.java
src/twentytwenty/sixteen/: TicketTranslation.java
src/twentytwenty/ten/: AdapterArray.java
src/twentytwenty/thirteen/: ShuttleSearch.java
src/twentytwenty/three/: TobogganTrajectory.java
src/twentytwenty/twelve/: RainRisk.java
src/twentytwenty/twenty/: JurassicJigsaw.java
src/twentytwenty/twentyfive/: ComboBreaker.java
src/twentytwenty/twentyfour/: LobbyLayout.java
src/twentytwenty/twentyone/: AllergenAssessment.java
src/twentytwenty/twentythree/: CrabCups.java  input.txt
src/twentytwenty/twentytwo/: CrabCombat.java
src/twentytwenty/two/: PasswordPhilosophy.java
src/twentytwentyfive/five/: Cafeteria.kt
src/twentytwentyfive/four/: PrintingDepartment.kt
src/twentytwentyfive/one/: SecretEntrance.kt
src/twentytwentyfive/seven/: Laboratories.kt
src/twentytwentyfive/six/: TrashCompactor.kt
src/twentytwentyfive/three/: Lobby.kt
src/twentytwentyfive/two/: GiftShop.kt
src/twentytwentyfour/eight/: ResonantCollinearity.hs
src/twentytwentyfour/eleven/: PlutonianPebbles.hs
src/twentytwentyfour/fifteen/: WarehouseWoes.hs
src/twentytwentyfour/five/: PrintQueue.hs
src/twentytwentyfour/four/: CeresSearch.hs
src/twentytwentyfour/fourteen/: RestroomRedoubt.hs
src/twentytwentyfour/nine/: DiskFragmenter.hs
src/twentytwentyfour/one/: HistorianHysteria.hs
src/twentytwentyfour/seven/: BridgeRepair.hs
src/twentytwentyfour/six/: GuardGallivant.hs
src/twentytwentyfour/ten/: HoofIt.hs
src/twentytwentyfour/thirteen/: ClawContraption.hs
src/twentytwentyfour/three/: MullItOver.hs
src/twentytwentyfour/twelve/: GardenGroups.hs
src/twentytwentyfour/two/: RedNosedReindeer.hs
src/twentytwentyone/eight/: SevenSegmentSearch.java
src/twentytwentyone/eleven/: DumboOctopus.java
src/twentytwentyone/fifteen/: Chiton.java
src/twentytwentyone/five/: HydrothermalVenture.java
src/twentytwentyone/four/: GiantSquid.java
src/twentytwentyone/fourteen/: ExtendedPolymerization.java
src/twentytwentyone/nine/: SmokeBasin.java
src/twentytwentyone/one/: SonarSweep.java
src/twentytwentyone/seven/: TreacheryWhales.java
src/twentytwentyone/seventeen/: TrickShot.java
src/twentytwentyone/six/: Lanternfish.java
src/twentytwentyone/sixteen/: PacketDecoder.java
src/twentytwentyone/ten/: SyntaxScoring.java
src/twentytwentyone/thirteen/: TransparentOrigami.java
src/twentytwentyone/three/: BinaryDiagnostic.java
src/twentytwentyone/twelve/: PassagePathing.java
src/twentytwentyone/two/: Dive.java
src/twentytwentythree/eight/: haunted_wasteland.rs
src/twentytwentythree/eleven/: cosmic_expansion.rs
src/twentytwentythree/fifteen/: lens_library.rs
src/twentytwentythree/five/: if_you_give_a_seed_a_fertilizer.rs
src/twentytwentythree/four/: scratchcards.rs
src/twentytwentythree/fourteen/: parabolic_reflector_dish.rs
src/twentytwentythree/nine/: mirage_maintenance.rs
src/twentytwentythree/one/: trebuchet.rs
src/twentytwentythree/seven/: camel_cards.rs
src/twentytwentythree/six/: wait_for_it.rs
src/twentytwentythree/sixteen/: the_floor_will_be_lava.rs
src/twentytwentythree/ten/: pipe_maze.rs
src/twentytwentythree/thirteen/: point_of_incidence.rs
src/twentytwentythree/three/: gear_ratios.rs
src/twentytwentythree/twelve/: hot_springs.rs  input.txt
src/twentytwentythree/two/: cube_conundrum.rs
src/twentytwentytwo/eight/: treetop_tree_house.rs
src/twentytwentytwo/eighteen/: boiling_boulders.rs
src/twentytwentytwo/eleven/: monkey_in_the_middle.rs
src/twentytwentytwo/fifteen/: beacon_exclusion_zone.rs
src/twentytwentytwo/five/: supply_stacks.rs
src/twentytwentytwo/four/: camp_cleanup.rs
src/twentytwentytwo/fourteen/: regolith_reservoir.rs
src/twentytwentytwo/nine/: rope_bridge.rs
src/twentytwentytwo/nineteen/: not_enough_minerals.rs
src/twentytwentytwo/one/: calorie_counting.rs
src/twentytwentytwo/seven/: no_space_left_on_device.rs
src/twentytwentytwo/seventeen/: pyroclastic_flow.rs
src/twentytwentytwo/six/: tuning_trouble.rs
src/twentytwentytwo/sixteen/: proboscidea_volcanium.rs
src/twentytwentytwo/ten/: cathode_ray_tube.rs
src/twentytwentytwo/thirteen/: distress_signal.rs
src/twentytwentytwo/three/: rucksack_reorganization.rs
src/twentytwentytwo/twelve/: hill_climbing_algorithm.rs
src/twentytwentytwo/twenty/: grove_positioning_system.rs
src/twentytwentytwo/twentyone/: monkey_math.rs
src/twentytwentytwo/twentytwo/: monkey_map.rs
src/twentytwentytwo/two/: rock_paper_scissors.rs
src/util/haskell/: IterTools.hs  List2d.hs  ListTools.hs  Parse.hs  Read.hs  Run.hs  Vec2.hs  Vec2d.hs
src/util/java/: Convert.java  Iterate.java  Read.java  TriConsumer.java  TriFunction.java
src/util/kotlin/: Convert.kt  Grid.kt  Iterables.kt  Range.kt  Read.kt  Run.kt  String.kt  Vector.kt
src/util/rust/: itertools.rs  lib.rs  math.rs  multidimensional.rs  read.rs  regextools.rs  run.rs
src/util/rust/arraytools/: array2d.rs  array3d.rs  iter.rs  mod.rs
src/util/rust/vector/: cmp.rs  convert.rs  mod.rs  ops.rs
(+49 files in other folders)
