[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
dot = "0.1.4"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.0"
itertools = "0.10.5"

[lib]
name = "util"
path = "src/util/rust/lib.rs"

[[bin]]
name = "calorie_counting"
path = "src/twentytwentytwo/one/calorie_counting.rs"

[[bin]]
name = "rock_paper_scissors"
path = "src/twentytwentytwo/two/rock_paper_scissors.rs"

[[bin]]
name = "rucksack_reorganization"
path = "src/twentytwentytwo/three/rucksack_reorganization.rs"

[[bin]]
name = "camp_cleanup"
path = "src/twentytwentytwo/four/camp_cleanup.rs"

[[bin]]
name = "supply_stacks"
path = "src/twentytwentytwo/five/supply_stacks.rs"

[[bin]]
name = "tuning_trouble"
path = "src/twentytwentytwo/six/tuning_trouble.rs"

[[bin]]
name = "no_space_left_on_device"
path = "src/twentytwentytwo/seven/no_space_left_on_device.rs"

[[bin]]
name = "treetop_tree_house"
path = "src/twentytwentytwo/eight/treetop_tree_house.rs"

[[bin]]
name = "rope_bridge"
path = "src/twentytwentytwo/nine/rope_bridge.rs"

[[bin]]
name = "cathode_ray_tube"
path = "src/twentytwentytwo/ten/cathode_ray_tube.rs"

[[bin]]
name = "monkey_in_the_middle"
path = "src/twentytwentytwo/eleven/monkey_in_the_middle.rs"

[[bin]]
name = "hill_climbing_algorithm"
path = "src/twentytwentytwo/twelve/hill_climbing_algorithm.rs"

[[bin]]
name = "distress_signal"
path = "src/twentytwentytwo/thirteen/distress_signal.rs"

[[bin]]
name = "regolith_reservoir"
path = "src/twentytwentytwo/fourteen/regolith_reservoir.rs"

[[bin]]
name = "beacon_exclusion_zone"
path = "src/twentytwentytwo/fifteen/beacon_exclusion_zone.rs"

[[bin]]
name = "proboscidea_volcanium"
path = "src/twentytwentytwo/sixteen/proboscidea_volcanium.rs"

[[bin]]
name = "pyroclastic_flow"
path = "src/twentytwentytwo/seventeen/pyroclastic_flow.rs"

[[bin]]
name = "boiling_boulders"
path = "src/twentytwentytwo/eighteen/boiling_boulders.rs"

[[bin]]
name = "not_enough_minerals"
path = "src/twentytwentytwo/nineteen/not_enough_minerals.rs"

[[bin]]
name = "grove_positioning_system"
path = "src/twentytwentytwo/twenty/grove_positioning_system.rs"

[[bin]]
name = "monkey_math"
path = "src/twentytwentytwo/twentyone/monkey_math.rs"

[[bin]]
name = "monkey_map"
path = "src/twentytwentytwo/twentytwo/monkey_map.rs"

[[bin]]
name = "trebuchet"
path = "src/twentytwentythree/one/trebuchet.rs"
